--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "generate": "nuxt generate",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lint": "npm run lint:js",
-    "test": "jest"
+    "test": "jest",
+    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
     "@nuxt/types": "^2.15.8",
@@ -33,6 +34,7 @@
     "jest": "^27.0.5",
     "postcss": "^8.4.14",
     "prettier": "^2.3.2",
+    "push-dir": "^0.4.1",
     "tailwindcss": "^3.1.4",
     "vue-jest": "^3.0.4"
   }
